objects/hed__Program_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Fee_Type_Option__c</fullName>
        <label>Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rio_ed__Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Program_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>